[tool.poetry]
name = "rflogger"
version = "0.1.0"
description = ""
authors = ["Dan Egnor <egnor@ofb.net>"]

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "^3.4"
matplotlib = "^3.3.0"
pandas = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
